<resources>
    <string name="app_name">Swoosh</string>
    <string name="background_image">background image</string>
    <string name="swoosh_logo">swoosh logo</string>
    <string name="desired_league">Desired League</string>
    <string name="mens_1">Mens</string>
    <string name="mens_2">Mens</string>
    <string name="mens_3">Mens</string>
    <string name="womens_1">Womens</string>
    <string name="womens_2">Womens</string>
    <string name="womens_3">Womens</string>
    <string name="co_ed_1">Co-ed</string>
    <string name="co_ed_2">Co-ed</string>
    <string name="co_ed_3">Co-ed</string>
    <string name="next">NEXT</string>
    <string name="bg_image">bg image</string>
    <string name="logo_image">logo_image</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="find_a_team_in_your_city_and_dominate_the_league">Find a team in your city, and dominate the league</string>
    <string name="get_started">GET STARTED</string>
    <string name="back_image">back_image</string>
    <string name="i_am_a">I am a:</string>
    <string name="beginner_1">Beginner</string>
    <string name="beginner_2">Beginner</string>
    <string name="beginner_3">Beginner</string>
    <string name="baller_1">Baller</string>
    <string name="baller_2">Baller</string>
    <string name="baller_3">Baller</string>
    <string name="finish">FINISH</string>
    <string name="searchLeague">Looking for a co-ed beginner league near you...</string>
    <string name="bg4">bg4</string>

</resources>
